# esp-protocols

./: AGENTS.md  FILE_STRUCTURE_REFERENCE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_A7670E.md  QUICK_START_GUIDE.md
components/a7670e_modem/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INTEGRATION_GUIDE.md  Kconfig  LICENSE  README.md  idf_component.yml  verify.bat  verify.sh
components/a7670e_modem/examples/a7670e_at_only/: CMakeLists.txt  a7670e_at_example.cpp
components/a7670e_modem/include/: a7670e_module.hpp  a7670e_types.hpp  a7670e_urc_handler.hpp
components/a7670e_modem/src/: a7670e_commands_edrx.cpp  a7670e_commands_fs.cpp  a7670e_commands_gnss.cpp  a7670e_commands_http.cpp  a7670e_commands_mqtt.cpp  a7670e_commands_net.cpp  a7670e_commands_serial.cpp  a7670e_commands_ssl.cpp  a7670e_module.cpp  a7670e_parse_utils.hpp  a7670e_urc_handler.cpp
components/a7670e_modem/test_apps/build_smoke/: CMakeLists.txt
components/a7670e_modem/test_apps/build_smoke/main/: CMakeLists.txt  build_smoke.cpp
components/esp_modem/command/include/: esp_modem_api.h
components/esp_modem/scripts/: generate_windows.ps1
components/esp_modem/test/host_test/: CMakeLists.txt
components/esp_modem/test/host_test/main/: CMakeLists.txt  a7670e_test.cpp
docs/esp_modem/a7670e-custom/: A76XX_AT_Commands_combined_indexed_reformatted.md  Implementierungsspezifikation__A7670E_Custom_esp_modem_Module_v2.md  prompt.txt
